index.htmlにopg情報追加

--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>デマカ星 by Project PALLOWEEN</title>
+  
+  <!-- OGP基本情報 -->
+<meta property="og:title" content="デマカ星 by Project PALLOWEEN">
+<meta property="og:description" content="中野ひとしによる創作活動の早見版。イベント予定・リンクまとめ">
+<meta property="og:image" content="https://mossaw.github.io/palloween-gate/ogp.png">
+<meta property="og:url" content="https://mossaw.github.io/palloween-gate/">
+<meta property="og:type" content="website">
+  
+  <!-- フォント読み込み -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
   /* --- 全体の基本設定 --- */
   * {
