--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>デマカ星 by Project PALLOWEEN</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   
   <!-- OGP基本情報 -->
 <meta property="og:title" content="デマカ星 by Project PALLOWEEN">
