--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>デマカ星 by Project PALLOWEEN</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-568YS7MR54"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-568YS7MR54');
+</script>
   
   <!-- OGP基本情報 -->
 <meta property="og:title" content="デマカ星 by Project PALLOWEEN">
