イベント参加予定更新

--- a/index.html
+++ b/index.html
@@ -197,7 +197,11 @@
 
     <div class="card">
       <h2>イベント参加予定</h2>
-      <p>2025/11/16 スパーク / サークル / 二次創作合同誌予定<br>コミティア、M3、文フリ参加検討中</p>
+      <p>
+      2025/08/31 CITY VEGA / 合同サークル / 二次創作合同誌<br>
+      2025/10/26 M3秋 / サークル / オリジナルソング予定<br>
+      2025/11/16 CITY SPARK / 合同サークル / 二次創作予定<br>
+      </p>
     </div>
 
     <a href="https://mossaw.blog.fc2.com/" target="_blank" class="link-card card">
