Instagram、Githubアイコンリンク追加

--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@
     <a href="https://x.com/mossaw" target="_blank" class="sns-link">
       <img src="x-icon.png" alt="" class="sns-icon">
     </a>
+    <a href="https://www.instagram.com/taraba_taeko/" target="_blank" class="sns-link">
+      <img src="Instagram_icon.png" alt="" class="sns-icon">
+    </a>
+    <a href="https://github.com/mossaw" target="_blank" class="sns-link">
+      <img src="github-icon.png" alt="" class="sns-icon">
+    </a>
     <p class="desc">中野ひとしによる創作活動の早見版です</p>
   </div>
 
