--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   border-radius: 8px;     /* 角丸 */
   width: 25px;
   height: 25px;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0.3rem;
   padding: 5px;
 }
 
